# esp32-lvgl

./: CMakeLists.txt  README.md  sdkconfig.old
components/lvgl/: CMakeLists.txt
components/lvgl/porting/: lv_port_disp.c  lv_port_disp.h
components/spi/: CMakeLists.txt  User_dev_spi.c  User_dev_spi.h  st7735.c  st7735.h
components/ui/: CMakeLists.txt  ui.c  ui.h
components/ui/screens/: ui_Screen1.c
main/: CMakeLists.txt  main.c
